kubernetes/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tock-genai
  labels:
    app: tock-genai
    environment: dev
