kubernetes/04-mongodb.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: tock-genai
spec:
  selector:
    app: mongo
  ports:
    - port: 27017
      targetPort: 27017
  clusterIP: None
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo
  namespace: tock-genai
spec:
  serviceName: mongo
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
      - name: mongo
        image: mongo:8.0.6
        command:
          - mongod
          - --bind_ip_all
          - --port
          - "27017"
          - --replSet
          - "tock"
        ports:
        - containerPort: 27017
        volumeMounts:
        - name: mongo-storage
          mountPath: /data/db
      volumeClaimTemplates:
      - metadata:
          name: mongo-storage
        spec:
          accessModes: ["ReadWriteOnce"]
          resources:
            requests:
              storage: 10Gi
---
apiVersion: v1
kind: Service
metadata:
  name: mongo2
  namespace: tock-genai
spec:
  selector:
    app: mongo2
  ports:
    - port: 27018
      targetPort: 27018
  clusterIP: None
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo2
  namespace: tock-genai
spec:
  serviceName: mongo2
  replicas: 1
  selector:
    matchLabels:
      app: mongo2
  template:
    metadata:
      labels:
        app: mongo2
    spec:
      containers:
      - name: mongo2
        image: mongo:8.0.6
        command:
          - mongod
          - --bind_ip_all
          - --port
          - "27018"
          - --replSet
          - "tock"
        ports:
        - containerPort: 27018
        volumeMounts:
        - name: mongo2-storage
          mountPath: /data/db
      volumeClaimTemplates:
      - metadata:
          name: mongo2-storage
        spec:
          accessModes: ["ReadWriteOnce"]
          resources:
            requests:
              storage: 10Gi
---
apiVersion: v1
kind: Service
metadata:
  name: mongo3
  namespace: tock-genai
spec:
  selector:
    app: mongo3
  ports:
    - port: 27019
      targetPort: 27019
  clusterIP: None
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo3
  namespace: tock-genai
spec:
  serviceName: mongo3
  replicas: 1
  selector:
    matchLabels:
      app: mongo3
  template:
    metadata:
      labels:
        app: mongo3
    spec:
      containers:
      - name: mongo3
        image: mongo:8.0.6
        command:
          - mongod
          - --bind_ip_all
          - --port
          - "27019"
          - --replSet
          - "tock"
        ports:
        - containerPort: 27019
        volumeMounts:
        - name: mongo3-storage
          mountPath: /data/db
      volumeClaimTemplates:
      - metadata:
          name: mongo3-storage
        spec:
          accessModes: ["ReadWriteOnce"]
          resources:
            requests:
              storage: 10Gi
